// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-auto-horizontal-scroll/GradientStyle Dark 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-dark"
>
  <!---->

  <!---->

  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 2200px;"
    >
      <div
        style="background: rgb(31, 31, 31); padding: 32px; color: rgb(255, 255, 255); width: 100%;"
      >
        <p
          class="mu-no-m"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>

        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-auto-horizontal-scroll/GradientStyle Interactive 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-interactive"
>
  <!---->

  <!---->

  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 2200px;"
    >
      <div
        style="background: rgb(31, 31, 31); padding: 32px; color: rgb(255, 255, 255); width: 100%;"
      >
        <p
          class="mu-no-m"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>

        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-auto-horizontal-scroll/GradientStyle Light 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-light"
>
  <!---->

  <!---->

  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 2200px;"
    >
      <div
        style="background: rgb(31, 31, 31); padding: 32px; color: rgb(255, 255, 255); width: 100%;"
      >
        <p
          class="mu-no-m"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>

        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-auto-horizontal-scroll/GradientStyle White Background 1`] = `
<div
  class="m-auto-horizontal-scroll m--is-gradient-style-white"
>
  <!---->

  <!---->

  <div
    class="m-auto-horizontal-scroll__body"
  >
    <div
      class="m-auto-horizontal-scroll__body-content"
      style="min-width: 2200px;"
    >
      <div
        style="background: rgb(31, 31, 31); padding: 32px; color: rgb(255, 255, 255); width: 100%;"
      >
        <p
          class="mu-no-m"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>

        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </div>
    </div>
  </div>
</div>
`;
